# Quickshell

./: .gitignore  shell.qml
gtk/: GtkThemeSync.qml  qmldir
launcher/: Globals.qml  Icon.qml  LauncherWindow.qml  qmldir  shell.qml
niri/: NiriThemeSync.qml  qmldir
ptyxis/: PtyxisThemeSync.qml  qmldir
swaylock/: SwaylockThemeSync.qml  qmldir
theming/: Theme.qml
topbar/: AudioControl.qml  AudioPopup.qml  AutoresticPopup.qml  AutoresticWidget.qml  Bar.qml  Battery.qml  BluetoothPopup.qml  BluetoothWidget.qml  CalendarPopup.qml  Clock.qml  Globals.qml  Icon.qml  Media.qml  NetworkPopup.qml  NetworkWidget.qml  NotificationPopup.qml  NotificationWidget.qml  PowerControls.qml  PowerProfile.qml  SystemInfo.qml  ThemePopup.qml  ThemeWidget.qml  UpdaterPopup.qml  UpdaterWidget.qml  Workspaces.qml  qmldir  shell.qml
updater-plugin/: CMakeLists.txt  FlatpakManager.cpp  FlatpakManager.hpp  FwupdManager.cpp  FwupdManager.hpp  OstreeUpdater.cpp  OstreeUpdater.hpp  dependencies.txt
wallpaper/: WallpaperManager.qml  qmldir
zed/: ZedThemeSync.qml  qmldir
